--- a/proper.client/package.json
+++ b/proper.client/package.json
@@ -11,6 +11,7 @@
     "@bcwdev/auth0provider-client": "0.0.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "firebase": "^8.3.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "socket.io-client": "^2.2.0",
