--- a/proper.client/package.json
+++ b/proper.client/package.json
@@ -11,12 +11,14 @@
     "@bcwdev/auth0provider-client": "0.0.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.19.0",
     "firebase": "^8.3.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "socket.io-client": "^2.2.0",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-datepicker": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.10",
