--- a/proper.client/package.json
+++ b/proper.client/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.19.0",
     "firebase": "^8.3.1",
     "jquery": "^3.5.1",
+    "nodemailer": "^6.5.0",
     "popper.js": "^1.16.1",
     "socket.io-client": "^2.2.0",
     "vue": "^3.0.5",
