--- a/proper.server/package.json
+++ b/proper.server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "mongoose": "^5.11.12",
+    "nodemailer": "^6.5.0",
     "socket.io": "2.3.0"
   },
   "engines": {
