--- a/proper.client/package.json
+++ b/proper.client/package.json
@@ -18,7 +18,8 @@
     "socket.io-client": "^2.2.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.3",
-    "vue3-datepicker": "^0.2.4"
+    "vue3-datepicker": "^0.2.4",
+    "vue3-mq": "^2.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~4.5.10",
