--- a/proper.client/package.json
+++ b/proper.client/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@bcwdev/auth0provider-client": "0.0.3",
+    "@ssmithereens/client-compress": "^2.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.19.0",
-    "firebase": "^8.3.1",
+    "firebase": "^8.3.2",
     "jquery": "^3.5.1",
     "nodemailer": "^6.5.0",
     "popper.js": "^1.16.1",
