--- a/proper.client/package.json
+++ b/proper.client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@bcwdev/auth0provider-client": "0.0.3",
+    "@ssmithereens/client-compress": "^2.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.19.0",
