--- a/proper.server/package.json
+++ b/proper.server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@bcwdev/auth0provider": "^1.0.3",
+    "@ssmithereens/client-compress": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
