--- a/proper.client/package.json
+++ b/proper.client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-report": "vue-cli-service build --report"
   },
   "dependencies": {
     "@bcwdev/auth0provider-client": "0.0.3",
@@ -19,6 +20,7 @@
     "popper.js": "^1.16.1",
     "socket.io-client": "^2.2.0",
     "vue": "^3.0.5",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^4.0.0",
     "vue-router": "^4.0.3",
     "vue3-datepicker": "^0.2.4"
   },
@@ -36,6 +38,7 @@
     "eslint-plugin-vue": "^7.4.1",
     "node-sass": "^5.0.0",
     "sass": "^1.32.4",
-    "sass-loader": "^10.1.1"
+    "sass-loader": "^10.1.1",
+    "vue-cli-plugin-compression": "~1.1.1"
   }
 }
