--- a/proper.server/package.json
+++ b/proper.server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@bcwdev/auth0provider": "^1.0.3",
     "@ssmithereens/client-compress": "^2.1.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
@@ -35,6 +36,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "sass": "^1.32.4"
+    "sass": "^1.32.4",
+    "vue-cli-plugin-compression": "~1.1.1"
   }
 }
